// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot for primary button 1`] = `
<button
  class="btn btn-primary"
>
  Save
</button>
`;

exports[`Button > matches snapshot when loading 1`] = `
<button
  class="btn btn-primary"
  disabled=""
>
  <span
    class="spinner"
  />
</button>
`;
